--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,15 +15,15 @@
 <link rel="alternate" hreflang="en" href="https://www.thestephaniemiranda.com/">
 <link rel="alternate" type="application/rss+xml" title="BLOG - Index &raquo; Feed" href="https://www.thestephaniemiranda.com/blog-index.xml">
 <script>!function(){var A=new Image;A.onload=A.onerror=function(){1==A.height&&(document.documentElement.className+=" webp")},A.src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAD8D+JaQAA3AA/ua1AAA"}();</script>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.d4d0dd.css" media="print">
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.8e5ff2.css" media="print">
 <!--[if lte IE 7]>
-<link rel="stylesheet" href="css/site.d4d0dd-lteIE7.css" type="text/css">
+<link rel="stylesheet" href="css/site.8e5ff2-lteIE7.css" type="text/css">
 <![endif]-->
 <!--[if lte IE 8]>
-<link rel="stylesheet" href="css/site.d4d0dd-lteIE8.css" type="text/css">
+<link rel="stylesheet" href="css/site.8e5ff2-lteIE8.css" type="text/css">
 <![endif]-->
 <!--[if gte IE 9]>
-<link rel="stylesheet" href="css/site.d4d0dd-gteIE9.css" type="text/css">
+<link rel="stylesheet" href="css/site.8e5ff2-gteIE9.css" type="text/css">
 <![endif]-->
 </head>
 <body id="b">
@@ -42,7 +42,7 @@
 <div class="ps29 v8 s42">
 <div class="s43">
 <div id="hamburger-menu" class="v10 ps30 s44 c30">
-<ul class="menu-dropdown-1 v11 ps28 s44 m2" id="m1">
+<ul class="menu-dropdown-2 v11 ps28 s44 m2" id="m2">
 <li class="v7 ps28 s44 mit2">
 <div class="menu-content mcv2">
 <div class="v7 ps28 s45 c31">
@@ -150,7 +150,7 @@
 <h1 class="p1 f2">JUMP TO PAGE</h1>
 </div>
 <div id="footer-navigation" class="v4 ps13 s19 c12">
-<ul class="menu-dropdown-2 v5 ps3 s19 m1" id="m2">
+<ul class="menu-dropdown-1 v5 ps3 s19 m1" id="m1">
 <li class="v2 ps3 s20 mit1">
 <a href="#" class="ml1"><div class="menu-content mcv1"><div class="v2 ps3 s21 c13"><div class="v3 ps14 s22 c14"><p class="p1 f3">Home</p></div></div></div></a>
 </li>
@@ -234,7 +234,7 @@
 </div>
 </div>
 <div class="menu-device"></div>
-<script>dpth="/";!function(){var s=["js/fixed.94abca.js","js/jquery.94abca.js","js/jqueryui.94abca.js","js/menu.94abca.js","js/menu-dropdown-animations.94abca.js","js/menu-dropdown.d4d0dd.js","js/menu-dropdown-1.d4d0dd.js","js/menu-dropdown-2.d4d0dd.js","js/consent.94abca.js","js/index.d4d0dd.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,10==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
+<script>dpth="/";!function(){var s=["js/fixed.94abca.js","js/jquery.94abca.js","js/jqueryui.94abca.js","js/menu.94abca.js","js/menu-dropdown-animations.94abca.js","js/menu-dropdown.8e5ff2.js","js/menu-dropdown-1.8e5ff2.js","js/menu-dropdown-2.8e5ff2.js","js/consent.94abca.js","js/index.8e5ff2.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,10==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
 </script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
