--- a/public_html/professional.html
+++ b/public_html/professional.html
@@ -14,15 +14,15 @@
 <script>window.gaf=function(){var e,t,a,n;e="script",t=document,a=t.createElement(e),n=t.getElementsByTagName(e)[0],a.async=1,a.src="https://www.googletagmanager.com/gtag/js?id=",n.parentNode.insertBefore(a,n)};if(!!document.cookie.match(/cookieConsent=true/))window.gaf();</script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','',{'anonymize_ip':true,'forceSSL':true});</script>
 <link rel="alternate" hreflang="en" href="https://www.thestephaniemiranda.com/professional.html">
 <script>!function(){var A=new Image;A.onload=A.onerror=function(){1==A.height&&(document.documentElement.className+=" webp")},A.src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAD8D+JaQAA3AA/ua1AAA"}();</script>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.8e5ff2.css" media="print">
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.d9e79f.css" media="print">
 <!--[if lte IE 7]>
-<link rel="stylesheet" href="css/site.8e5ff2-lteIE7.css" type="text/css">
+<link rel="stylesheet" href="css/site.d9e79f-lteIE7.css" type="text/css">
 <![endif]-->
 <!--[if lte IE 8]>
-<link rel="stylesheet" href="css/site.8e5ff2-lteIE8.css" type="text/css">
+<link rel="stylesheet" href="css/site.d9e79f-lteIE8.css" type="text/css">
 <![endif]-->
 <!--[if gte IE 9]>
-<link rel="stylesheet" href="css/site.8e5ff2-gteIE9.css" type="text/css">
+<link rel="stylesheet" href="css/site.d9e79f-gteIE9.css" type="text/css">
 <![endif]-->
 </head>
 <body id="b">
@@ -41,7 +41,7 @@
 <div class="s128">
 <div class="v15 ps79 s129 c76"></div>
 <div id="hamburger-menu" class="v18 ps81 s130 c77">
-<ul class="menu-dropdown-2 v19 ps79 s130 m3" id="m2">
+<ul class="menu-dropdown-1 v19 ps79 s130 m3" id="m2">
 <li class="v15 ps79 s130 mit3">
 <div class="menu-content mcv3">
 <div class="v15 ps79 s131 c78">
@@ -50,7 +50,7 @@
 </div>
 </div>
 </div>
-<ul class="menu-dropdown v20 ps83 s133 m3">
+<ul class="menu-dropdown-2 v20 ps83 s133 m3">
 <li class="v15 ps79 s134 mit3">
 <a href="./" class="ml3"><div class="menu-content mcv3"><div class="v15 ps79 s135 c80"><div class="v17 ps84 s136 c79"><p class="p8 f32">Home</p></div></div></div></a>
 </li>
@@ -161,7 +161,7 @@
 <h1 class="p1 f2">JUMP TO PAGE</h1>
 </div>
 <div id="footer-navigation" class="v4 ps67 s105 c6">
-<ul class="menu-dropdown-1 v5 ps3 s105 m1" id="m3">
+<ul class="menu-dropdown v5 ps3 s105 m1" id="m3">
 <li class="v2 ps3 s106 mit1">
 <a href="./" class="ml1"><div class="menu-content mcv1"><div class="v2 ps3 s107 c60"><div class="v3 ps14 s108 c14"><p class="p1 f26">Home</p></div></div></div></a>
 </li>
@@ -247,7 +247,7 @@
 </div>
 </div>
 <div class="menu-device"></div>
-<script>dpth="/";!function(){var s=["js/jquery.94abca.js","js/jqueryui.94abca.js","js/fixed.94abca.js","js/slick.94abca.js","js/menu.94abca.js","js/menu-dropdown-animations.94abca.js","js/menu-dropdown.8e5ff2.js","js/menu-dropdown-1.8e5ff2.js","js/menu-dropdown-2.8e5ff2.js","js/consent.94abca.js","js/professional.8e5ff2.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,11==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
+<script>dpth="/";!function(){var s=["js/jquery.94abca.js","js/jqueryui.94abca.js","js/fixed.94abca.js","js/slick.94abca.js","js/menu.94abca.js","js/menu-dropdown-animations.94abca.js","js/menu-dropdown.d9e79f.js","js/menu-dropdown-1.d9e79f.js","js/menu-dropdown-2.d9e79f.js","js/consent.94abca.js","js/professional.d9e79f.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,11==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
 </script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
