--- a/public_html/blog.html
+++ b/public_html/blog.html
@@ -14,15 +14,15 @@
 <script>window.gaf=function(){var e,t,a,n;e="script",t=document,a=t.createElement(e),n=t.getElementsByTagName(e)[0],a.async=1,a.src="https://www.googletagmanager.com/gtag/js?id=",n.parentNode.insertBefore(a,n)};if(!!document.cookie.match(/cookieConsent=true/))window.gaf();</script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','',{'anonymize_ip':true,'forceSSL':true});</script>
 <link rel="alternate" hreflang="en" href="https://www.thestephaniemiranda.com/blog.html">
 <script>!function(){var A=new Image;A.onload=A.onerror=function(){1==A.height&&(document.documentElement.className+=" webp")},A.src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAD8D+JaQAA3AA/ua1AAA"}();</script>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.d9e79f.css" media="print">
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.1ef0f3.css" media="print">
 <!--[if lte IE 7]>
-<link rel="stylesheet" href="css/site.d9e79f-lteIE7.css" type="text/css">
+<link rel="stylesheet" href="css/site.1ef0f3-lteIE7.css" type="text/css">
 <![endif]-->
 <!--[if lte IE 8]>
-<link rel="stylesheet" href="css/site.d9e79f-lteIE8.css" type="text/css">
+<link rel="stylesheet" href="css/site.1ef0f3-lteIE8.css" type="text/css">
 <![endif]-->
 <!--[if gte IE 9]>
-<link rel="stylesheet" href="css/site.d9e79f-gteIE9.css" type="text/css">
+<link rel="stylesheet" href="css/site.1ef0f3-gteIE9.css" type="text/css">
 <![endif]-->
 </head>
 <body class="fbk fx8" id="b" data-fbk="fx8">
@@ -186,7 +186,7 @@
 </div>
 </div>
 <div class="menu-device"></div>
-<script>dpth="/";!function(){var s=["js/fixed.94abca.js","js/jquery.94abca.js","js/jqueryui.94abca.js","js/menu.94abca.js","js/menu-dropdown-animations.94abca.js","js/menu-dropdown.d9e79f.js","js/menu-dropdown-1.d9e79f.js","js/menu-dropdown-2.d9e79f.js","js/consent.94abca.js","js/blog.d9e79f.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,10==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
+<script>dpth="/";!function(){var s=["js/fixed.94abca.js","js/jquery.94abca.js","js/jqueryui.94abca.js","js/menu.94abca.js","js/menu-dropdown-animations.94abca.js","js/menu-dropdown.1ef0f3.js","js/menu-dropdown-1.1ef0f3.js","js/menu-dropdown-2.1ef0f3.js","js/consent.94abca.js","js/blog.1ef0f3.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,10==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
 </script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
